--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
