--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/pg": "^8.10.2",
+    "@types/pg-format": "^1.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
